	 images. Basically just Garry's patch with some coding style
	 changes (patch #916186) (Garry Lancaster).
20040318 ide.c: open .hdf files in binary mode.
20040319 ide.c: ftell and fseek are not the same thing...
20040319 ide.c,libspectrum.h.in: implement a write cache for the IDE
	 drives.
20040320 szx.c: bump version number to 1.2, save Scorpion port 0x1ffd
	 and add some comments about the failures in the .szx
	 specification.
20040320 libspectrum.c,libspectrum.h.in: add identification of .hdf hard
	 disk images.
20040320 accessor.pl,snap_accessors.txt,szx.c: add support for the Beta
	 128 block of the .szx format.
20040320 libspectrum.c,libspectrum.h.in: add an 'Even M1' capability.
20040401 libspectrum.h.in,sna.c,szx.c,z80.c: minimalistic +3e support.
20040402 libspectrum.c,timings.c: enough to make the +3e support actually
	 usable by Fuse.
20040402 libspectrum.h.in,tape.c: add libspectrum_tape_write() function.
20040402 libspectrum.c: add capabilities for the +3e.
20040408 Makefile.am,configure.in,myglib.c,myglib/{.cvsignore,Makefile.am}:
	 move the glib replacement code into its own directory.
20040408 myglib/Makefile.am,myglib/ghash.c: add minimal GHashTable
	 replacement (borrowed from glib 2.4.0).
20040414 myglib/gslist.c: fix two free_list related memory leaks.
20040415 make-perl.c,myglib/ghash.c: fix compilation with GHashTable
	 replacement (borrowed code from glib 2.4.0 and 1.2.10).
20040417 make-perl.c,myglib/ghash.c: the world doesn't need to know about
         GHashNode.
20040513 libspectrum.c,libspectrum.h.in,szx.c,timings.c: add support for
	 the Spectrum SE (part of patch #929112) (Fred).
20040513 timings.c: improved timings for the TC2048 and TC2068 (more of
	 patch #929112) (Fred).
20040514 szx.c: use symbolic constants for the .szx machine numbers.
20040514 szx.c: allow loading of +3e snaps to work.
20040519 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c:
	 add support for saving ZXCF information in .szx snapshots.