@@ -210,3 +210,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040514 szx.c: allow loading of +3e snaps to work.
 20040519 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c:
 	 add support for saving ZXCF information in .szx snapshots.
+20040521 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c:
+         add support for saving interface 2 cart in .szx snapshots.
